[gd_scene load_steps=15 format=3 uid="uid://bao3kl6bmfjks"]

[ext_resource type="Texture2D" uid="uid://cwvr6oc2hniqy" path="res://Resources/Michael Games Sprites/dungeon_props.png" id="1_1dg8n"]
[ext_resource type="Script" path="res://Props/Interactables/Locked Door/lockedDoor.gd" id="1_43rwh"]
[ext_resource type="Resource" uid="uid://rusg8i52j4qk" path="res://Items/smallDungeonKey.tres" id="2_bchvr"]
[ext_resource type="PackedScene" uid="uid://2e0h8mj62td1" path="res://GeneralNodes/PersistentDataHandler/persistentDataHandler.tscn" id="2_xgm02"]
[ext_resource type="AudioStream" uid="uid://vqdsse8frdta" path="res://Resources/Michael Games Sprites/locked_door.wav" id="3_0vtq1"]
[ext_resource type="AudioStream" uid="uid://bwm6guilsd83h" path="res://Resources/Michael Games Sprites/unlock_door.wav" id="4_gr2ce"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q6mm8"]
size = Vector2(63.3333, 60.6667)

[sub_resource type="Animation" id="Animation_d60u8"]
resource_name = "closed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7bvfa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_xp1xr"]
resource_name = "opened"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_hhlcx"]
resource_name = "closeDoor"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_otswm"]
resource_name = "openDoor"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qfhsy"]
_data = {
"RESET": SubResource("Animation_7bvfa"),
"closeDoor": SubResource("Animation_hhlcx"),
"closed": SubResource("Animation_d60u8"),
"openDoor": SubResource("Animation_otswm"),
"opened": SubResource("Animation_xp1xr")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_un3bv"]
size = Vector2(37.3333, 20)

[node name="LockedDoor" type="Node2D"]
z_index = 2
texture_filter = 1
scale = Vector2(3, 3)
script = ExtResource("1_43rwh")
keyItem = ExtResource("2_bchvr")
lockedAudio = ExtResource("3_0vtq1")
openAudio = ExtResource("4_gr2ce")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.666667, -42)
texture = ExtResource("1_1dg8n")
hframes = 7

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0.999999, -30.3333)
shape = SubResource("RectangleShape2D_q6mm8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qfhsy")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="PersistentDataHandler" parent="." instance=ExtResource("2_xgm02")]

[node name="InteractArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea2D"]
position = Vector2(0.666667, -10)
shape = SubResource("RectangleShape2D_un3bv")
debug_color = Color(0.714722, 0.671145, 0, 0.42)
